[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
num_enum = "0.5.4"
once_cell = "1.9.0"
phf = {version = "0.11.1", features = ["macros"] }
structopt = "0.3"
# tracing-test = "0.2.1"
thiserror = "1.0.30"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"

[dev-dependencies]
assert_cmd = "2.0.8"
lazy-regex = "2.4.1"

[profile.release]
debug = true
