[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.8", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
num_enum = "0.6.1"
pest = { version = "2.7.13", features = ["miette-error"] }
pest_derive = "2.7.13"
phf = { version = "0.11.1", features = ["macros"] }
sptr = "0.3.2"
# tracing-test = "0.2.1"
thiserror = "1.0.30"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"

[dev-dependencies]
assert_cmd = "2.0.8"
criterion = "0.5.1"
lazy-regex = "2.4.1"

[profile.release]
debug = true

[[bench]]
name = "clox_bench"
harness = false
